--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     
     <div class="navbar">
         <div class="navbar-izquierda">
-            <img id="logo" src="/img/logo-codo-a-codo.png" alt="">
+            <img id="logo" src="/integrador-codo-a-codo//img/logo-codo-a-codo.png" alt="">
             <span class="titulo-logo">&nbsp; &nbsp;Conf Bs As</span>
         </div>
         
