--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     
     <div class="navbar">
         <div class="navbar-izquierda">
-            <img id="logo" src="/integrador-codo-a-codo//img/logo-codo-a-codo.png" alt="">
+            <img id="logo" src="/integrador-codo-a-codo/img/logo-codo-a-codo.png" alt="">
             <span class="titulo-logo">&nbsp; &nbsp;Conf Bs As</span>
         </div>
         
@@ -86,7 +86,7 @@
     <div class="row">
       <div class="col-md-4"">
       <div class="card">
-        <img src="img/steve.jpg" class="card-img-top imagen-card" alt="Steve Jobs">
+        <img src="/integrador-codo-a-codo/img/steve.jpg" class="card-img-top imagen-card" alt="Steve Jobs">
         <div class="card-body">
           <a href="#" class="btn btn-info mb-2">JavaScript</a>
           <a href="#" class="btn btn-warning text-light mb-2">React</a>
@@ -99,7 +99,7 @@
       </div>
       <div class="col-md-4"">
         <div class="card">
-          <img src="img/bill.jpg" class="card-img-top imagen-card" alt="Steve Jobs">
+          <img src="/integrador-codo-a-codo/img/bill.jpg" class="card-img-top imagen-card" alt="Steve Jobs">
           <div class="card-body">
             <a href="#" class="btn btn-info mb-2">JavaScript</a>
             <a href="#" class="btn btn-warning text-light mb-2">React</a>
@@ -112,7 +112,7 @@
       </div>
       <div class="col-md-4"">
         <div class="card">
-          <img src="img/lovelace.jpeg" class="card-img-top imagen-card" alt="Steve Jobs">
+          <img src="/integrador-codo-a-codo/img/lovelace.jpeg" class="card-img-top imagen-card" alt="Steve Jobs">
           <div class="card-body">
             <a href="#" class="btn btn-info mb-2">Negocios</a>
             <a href="#" class="btn btn-warning text-light mb-2">Startups</a>
@@ -141,7 +141,7 @@
 <div class="buenos-aires">
 
   <div class="imagen">
-      <img class="playa" src="/img/playa.png" alt="">
+      <img class="playa" src="/integrador-codo-a-codo/img/playa.png" alt="">
   </div>
 
   <div class="descripcion-bs" >
